fix: header text alignment

--- a/src/containers/Articles/styles.scss
+++ b/src/containers/Articles/styles.scss
@@ -23,6 +23,11 @@
 
     // Desktop
     @include breakpoint-up(large){
+
+        &__header{
+            text-align: initial
+        }
+
         &__list{
             @include flex(sb, c, row);
 
